--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vben-admin",
+  "name": "peak-web-admin",
   "version": "1.0.0",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -26,6 +26,7 @@
     "vue-i18n": "9.0.0-rc.2",
     "vue-types": "^3.0.2",
     "vuex-module-decorators": "^1.0.1",
+    "vuex-class": "0.3.2",
     "axios": "^0.21.1",
     "mockjs": "^1.1.0",
     "ant-design-vue": "2.0.0",
@@ -76,7 +77,6 @@
     "esno": "^0.4.3",
     "fs-extra": "^9.1.0",
     "husky": "^4.3.8",
-    "less": "^4.1.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
