初始化代码结构

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "js-cookie": "2.2.1",
     "typescript": "~3.9.3",
     "fastclick": "1.0.6",
-    "vue-property-decorator": "9.1.2"
+    "vue-property-decorator": "9.1.2",
+    "vue-savedata": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^12.12.6",
