初始化代码结构

--- a/.env.production
+++ b/.env.production
@@ -1,32 +1,31 @@
-NODE_ENV=production
+VUE_APP_PORT=3100
 
 # Whether to open mock
-VITE_USE_MOCK = true
+VUE_APP_USE_MOCK=true
 
 # public path
-VITE_PUBLIC_PATH = /
+VUE_APP_PUBLIC_PATH=/
+
+# Cross-domain proxy, you can configure multiple
+VUE_APP_PROXY=[["/api","http://localhost:3000"],["/upload","http://localhost:3001/upload"]]
+# VUE_PROXY=[["/api","https://vvbin.cn/test"]]
 
 # Delete console
-VITE_DROP_CONSOLE = true
-
-# Whether to output gz file for packaging
-VITE_BUILD_GZIP = false
+VUE_DROP_CONSOLE=false
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/api
+VUE_APP_API_URL=/api
 
 # File upload address， optional
-# It can be forwarded by nginx or write the actual address directly
-VITE_GLOB_UPLOAD_URL=/upload
+VUE_APP_UPLOAD_URL=/upload
 
 # Interface prefix
-VITE_GLOB_API_URL_PREFIX=
+VUE_APP_API_URL_PREFIX=
 
-# Whether to enable image compression
-VITE_USE_IMAGEMIN= true
+VUE_APP_PREVIEW=true
 
-# use pwa
-VITE_USE_PWA = false
+VUE_APP_API_BASE_URL=/api
 
-# Is it compatible with older browsers
-VITE_LEGACY = false
+NODE_ENV="production"
+
+VUE_USE_MOCK=true
