--- a/.env
+++ b/.env
@@ -1,11 +1,8 @@
 # port
-VITE_PORT = 3100
+VUE_PORT = 8080
 
-# spa-title
-VITE_GLOB_APP_TITLE = Vben Admin
+VUE_GLOB_TITLE = TS-VUE3-WEB-MANAGE
 
-# spa shortname
-VITE_GLOB_APP_SHORT_NAME = vue_vben_admin_2x
-
+VUE_GLOB_SHORT_NAME = VUE3-TSX-PEAK
 
 BASE_URL = ""
