--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "typescript": "~3.9.3",
     "fastclick": "1.0.6",
     "vue-property-decorator": "9.1.2",
-    "vue-savedata": "^2.0.6"
+    "vue-savedata": "^2.0.6",
+    "mockjs2": "^1.0.8"
   },
   "devDependencies": {
     "@types/node": "^12.12.6",
