--- a/package.json
+++ b/package.json
@@ -113,6 +113,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "compression-webpack-plugin": "^3.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^4.2.3",
+    "image-webpack-loader": "^7.0.1",
+    "vue-svg-component-runtime": "^1.0.1",
+    "vue-svg-icon-loader": "^2.1.1",
     "webpack-bundle-analyzer": "^3.6.1",
     "copy-webpack-plugin": "5.1.1",
     "vue-tsx-support": "2.3.1",
